# ChangeLog for gnome-extra/deskbar-applet
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.46 2007/02/03 21:57:51 ticho Exp $

  03 Feb 2007; Andrej Kacian <ticho@gentoo.org>
  deskbar-applet-2.16.2-r1.ebuild:
  Stable on x86, bug #164978.

  03 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  deskbar-applet-2.16.2-r1.ebuild:
  Stable on ppc wrt bug #164978.

  03 Feb 2007; Olivier Crête <tester@gentoo.org>
  deskbar-applet-2.16.2-r1.ebuild:
  Stable on amd64 per bug #164978

  01 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  deskbar-applet-2.16.2-r1.ebuild:
  Stable on sparc

  21 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on IA64, bug 156662.

  19 Jan 2007; Jeroen Roovers <jer@gentoo.org>
  deskbar-applet-2.16.2-r1.ebuild:
  Stable for HPPA (bug #147751).

  14 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on Alpha.

  10 Jan 2007; Mart Raudsepp <leio@gentoo.org>
  -files/deskbar-applet-2.16-fix_encoding.patch,
  -deskbar-applet-2.16.0.ebuild, -deskbar-applet-2.16.1.ebuild:
  Prune old versions

*deskbar-applet-2.16.2-r1 (28 Dec 2006)

  28 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  +deskbar-applet-2.16.2-r1.ebuild:
  Revbump to fix a dependency issue for the dictionary plugin (bug #142094)

  21 Dec 2006; Markus Rothe <corsair@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on ppc64; bug #156662

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on sparc

  18 Dec 2006; Tom Gall <tgall@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  marked ~ppc64 wrt bug #156662

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on ppc wrt bug #156662.

  12 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  deskbar-applet-2.16.2.ebuild:
  Stable on amd64 wrt bug #156662.
