@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gnome-games-extra-data
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games-extra-data/ChangeLog,v 1.28 2007/02/03 21:54:08 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-games-extra-data/ChangeLog,v 1.29 2007/02/04 08:55:41 corsair Exp $
+
+  04 Feb 2007; Markus Rothe <corsair@gentoo.org>
+  gnome-games-extra-data-2.12.0.ebuild:
+  Stable on ppc64; bug #164978
 
   03 Feb 2007; Andrej Kacian <ticho@gentoo.org>
   gnome-games-extra-data-2.12.0.ebuild:
