@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/deskbar-applet
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.46 2007/02/03 21:57:51 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/deskbar-applet/ChangeLog,v 1.47 2007/02/04 08:59:13 corsair Exp $
+
+  04 Feb 2007; Markus Rothe <corsair@gentoo.org>
+  deskbar-applet-2.16.2-r1.ebuild:
+  Stable on ppc64; bug #164978
 
   03 Feb 2007; Andrej Kacian <ticho@gentoo.org>
   deskbar-applet-2.16.2-r1.ebuild:
